Mark Pages -- Reduce Cost Updates

--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -211,10 +211,10 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label> 
+                                                            <label for="ta3" class="save">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600">Mark Description</h3>
-                                                            <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>  
+                                                            <label for="ta2" class="save">Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
                                                         <div id="nocolorclaim" class="form-group form-group-md"><!--toggle 'no' radio-->
@@ -254,7 +254,7 @@
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved">Reduce Fee</span></h3>
+                                                            <h3 class="weight600">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="language">Language</label>
@@ -298,7 +298,7 @@
                                                           <label for="inlineRadio6" class="radio-inline radiocontainer">No<input type="radio" name="nonlatradio" id="inlineRadio6" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestransliteration"><!--toggle 'yes' radio-->
-                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved">Reduce Fee</span></h3>
+                                                            <h3 class="weight600">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
                                                             <div class="row">
                                                                 <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                     <label for="languagetranslit">Language</label>
@@ -347,7 +347,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved">Reduce Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                             	<div class="row">
                                                                 	<div class="containsaname col-xs-12">
