--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -226,9 +226,9 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Identify the colors in your mark.</label> 
+                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
-                                                            <h3 class="weight600">Mark Description</h3>
+                                                            <h3 class="weight600 form-group form-group-md">Mark Description</h3>
                                                             <label for="ta2"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
@@ -271,6 +271,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                             	<div class="row">
                                                                 	<div class="containsaname col-xs-12">
