--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -224,7 +224,7 @@
                                                         <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
                                                             <div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved">Reduce Fee</span></h3>
+                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
@@ -283,7 +283,7 @@
                                                             <p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved">Reduce Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                                 <div class="row">
                                                                     <div class="containsaname col-xs-12">
