--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -168,6 +168,13 @@
                 </div>
                 <h1>Trademark Details &#8211; Stylized</h1>
                 <p class="required"><span class="weight600">&#42; = Required</span></p>
+                <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
+                <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                    <label class="switch">
+                    <input class="togglesavemore" type="checkbox">
+                    <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                    </label>
+                </div>
                 <!--START Trademark Details Design with Text-->
                 <div class="row">
                     <div class="col-xs-12">
@@ -219,9 +226,8 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Identify the colors in your mark.</label> 
-                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
-                                                            <h3 class="weight600">Mark Description</h3>
+                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
+                                                            <h3 class="weight600 form-group form-group-md">Mark Description</h3>
                                                             <label for="ta2"><span class="weight600">&#42;</span> Enter the description of the mark including the location of the colors. <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                                         </div>
@@ -255,14 +261,15 @@
                                                         </div>
                                                     </div>
                                                     <div>
-                                                        <p id="foreign">Does your mark contain foreign wording?</p>                                                        <div role="radiogroup" aria-labelledby="foreign" class="form-group form-group-md">
+                                                        <p id="foreign">Does your mark contain foreign wording?</p>                                                        
+                                                        <div role="radiogroup" aria-labelledby="foreign" class="form-group form-group-md">
                                                             <label for="inlineRadio3" class="radio-inline radiocontainer">Yes<input type="radio" name="foreignradio" id="inlineRadio3" value="yes" tabindex="0"><span class="checkmark"></span></label>
                                                             <label for="inlineRadio4" class="radio-inline radiocontainer">No<input type="radio" name="foreignradio" id="inlineRadio4" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation" aria-labelledby="translate"><!--toggle 'yes' radio-->
                                                             <div class="row">
                                                             	<div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation.</h3>
+                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
                                                                     <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                         <label for="language">Language</label>
                                                                         <select class="form-control" id="language">
@@ -320,7 +327,7 @@
                                                         <div id="yestransliteration" aria-labelledby="translitp"><!--toggle 'yes' radio-->
                                                         <div class="row">
                                                           	<div class="col-xs-12 form-group form-group-md holdsatransliterate">
-                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark.</h3>
+                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></h3>
                                                                     <div class="row">
                                                                         <div class="form-group form-group-md col-xs-12 col-md-3">
                                                                             <label for="languagetranslit">Language</label>
@@ -382,6 +389,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
+                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                             	<div class="row">
                                                                 	<div class="containsaname col-xs-12">
