--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -317,7 +317,7 @@
                                                                     <p class="weight600" id="foreignapplication">Foreign Application Information:</p>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="country">Country: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="country">Country: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <select class="form-control" id="country">
                                                                       <option value="Select">Select</option>
                                                                       <option value="Mexico">Mexico</option>
@@ -326,7 +326,7 @@
                                                                     </select>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="appnumber">Foreign application number: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="appnumber">Foreign application number: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <input type="text" class="form-control" id="appnumber">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
@@ -350,7 +350,7 @@
                                                             		<p class="weight600" id="foreignregistration">Foreign Registration Information:</p>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12" aria-labelledby="foreignregistration">
-                                                                    <label for="countrytwo">Country: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="countrytwo">Country: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <select class="form-control" id="countrytwo">
                                                                       <option value="Select">Select</option>
                                                                       <option value="Mexico">Mexico</option>
@@ -359,23 +359,23 @@
                                                                     </select>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="appnumbertwo">Foreign registration number: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="appnumbertwo">Foreign registration number: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <input type="text" class="form-control" id="appnumbertwo">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="reg-date">Foreign registration date: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="reg-date">Foreign registration date: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <input type="date" class="form-control" id="reg-date" name="regdate" value="">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="reg-date-exp">Foreign registration expiration date: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <input type="date" class="form-control" id="reg-date-exp" name="regdatexp" value="">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle visuallyremoved">Reduce Fee</span></label>
+                                                                    <label for="renew-date">Foreign registration renewal date (if applicable): <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <input type="date" class="form-control" id="renew-date" name="renewdate" value="">
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12">
-                                                                    <p id="upimagethree">Provide an image of forereign registration certificate: <span class="label label-info subtle visuallyremoved">Reduce Fee</span></p>
+                                                                    <p id="upimagethree">Provide an image of forereign registration certificate: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></p>
                                                                     <div>
                                                                         <label class="small upload-drop-zone" for="renewfile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></label>
                                                                         <input type="file" id="renewfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgtwo upimagethree">
