--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -171,6 +171,13 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h1>Declaration and Signature</h1>
+                            <p class="instructions" id="costsavingoptions">Reduce Fee Mode</p>
+                            <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn reduce fee labels on or off">
+                                <label class="switch">
+                                <input class="togglesavemore" type="checkbox">
+                                <span class="slider"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                                </label>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
@@ -434,27 +441,27 @@
                                                        		<div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md">		
                                                                     <input class="form-check-input checkmark" type="checkbox" value="court" tabindex="0" aria-labelledby="courtdecree" id="courtd">
-                                                                    <label class="form-check-label form-check" for="courtd" id="courtdec"><span class="radio notspecial" id="courtdecree">The signatory believes that the applicant is the owner of the trademark/service mark sought to be registered;</span></label>
+                                                                    <label class="form-check-label form-check" for="courtd" id="courtdec"><span class="radio notspecial" id="courtdecree">The signatory believes that the applicant is the owner of the trademark/service mark sought to be registered; <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="ttab" tabindex="0" aria-labelledby="priorttab" id="ttabmade">
-                                                                    <label class="form-check-label form-check" for="ttabmade" id="ttabdecision"><span class="radio notspecial" id="priorttab">The mark is in use in commerce on or in connection with the goods/services in the application;</span></label>
+                                                                    <label class="form-check-label form-check" for="ttabmade" id="ttabdecision"><span class="radio notspecial" id="priorttab">The mark is in use in commerce on or in connection with the goods/services in the application; <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="conflicting" tabindex="0" aria-labelledby="conflictingreg" id="conflict">
-                                                                    <label class="form-check-label form-check" for="conflict" id="conflictowner"><span class="radio notspecial" id="conflictingreg">The specimen(s) shows the mark as used on or in connection with the goods/services in the application; and</span></label>
+                                                                    <label class="form-check-label form-check" for="conflict" id="conflictowner"><span class="radio notspecial" id="conflictingreg">The specimen(s) shows the mark as used on or in connection with the goods/services in the application; and <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier" tabindex="0" aria-labelledby="early" id="earlieruse">
-                                                                    <label class="form-check-label form-check" for="earlieruse" id="firstcommerce"><span class="radio notspecial" id="early">To the best of the signatory&#8217;s knowledge and belief, the facts recited in the application are accurate. To the best of the signatory&#8217;s knowledge and belief, no other persons, except, if applicable, concurrent users, have the right to use the mark in commerce, either in the identical form or in such near resemblance as to be likely, when used on or in connection with the goods/services of such other persons, to cause confusion or mistake, or to deceive.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlieruse" id="firstcommerce"><span class="radio notspecial" id="early">To the best of the signatory&#8217;s knowledge and belief, the facts recited in the application are accurate. To the best of the signatory&#8217;s knowledge and belief, no other persons, except, if applicable, concurrent users, have the right to use the mark in commerce, either in the identical form or in such near resemblance as to be likely, when used on or in connection with the goods/services of such other persons, to cause confusion or mistake, or to deceive. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>		
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier4" tabindex="0" aria-labelledby="earlyu" id="earlierusey">
-                                                                    <label class="form-check-label form-check" for="earlierusey" id="firstcommercefour"><span class="radio notspecial" id="earlyu">To the best of the signatory&#8217;s knowledge, information, and belief, formed after an inquiry reasonable under the circumstances, the allegations and other factual contentions made above have evidentiary support.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlierusey" id="firstcommercefour"><span class="radio notspecial" id="earlyu">To the best of the signatory&#8217;s knowledge, information, and belief, formed after an inquiry reasonable under the circumstances, the allegations and other factual contentions made above have evidentiary support. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>		
                                                                 </div>
                                                                 <div class="col-xs-12 form-group form-group-md">
                                                                     <input class="form-check-input checkmark" type="checkbox" value="earlier5" tabindex="0" aria-labelledby="earlyx" id="earlierusex">
-                                                                    <label class="form-check-label form-check" for="earlierusex" id="firstcommercefive"><span class="radio notspecial" id="earlyx">The signatory being warned that willful false statements and the like are punishable by fine or imprisonment, or both, under 18 U.S.C. &#167; 1001, and that such willful false statements and the like may jeopardize the validity of the application or submission or any registration resulting therefrom, declares that all statements made of his/her own knowledge are true and all statements made on information and belief are believed to be true.</span></label>		
+                                                                    <label class="form-check-label form-check" for="earlierusex" id="firstcommercefive"><span class="radio notspecial" id="earlyx">The signatory being warned that willful false statements and the like are punishable by fine or imprisonment, or both, under 18 U.S.C. &#167; 1001, and that such willful false statements and the like may jeopardize the validity of the application or submission or any registration resulting therefrom, declares that all statements made of his/her own knowledge are true and all statements made on information and belief are believed to be true. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></span></label>		
                                                                 </div>
                                                             </div><!--end checkbox row-->
                                                        </div>
@@ -476,7 +483,7 @@
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
                                                                     <p class="sr-only">Enter the date in the following format: 20:36:14 May 30, 2019 E.T.</p>
-                                                                    <label for="datesigned">Date Signed</label>
+                                                                    <label for="datesigned">Date Signed <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduce Fee</span></label>
                                                                     <textarea type="text" rows="2" class="form-control" placeholder="20:36:14 May 30, 2019 E.T." id="datesigned"></textarea>
                                                                 </div>
                                                                 <div class="form-group form-group-md col-xs-12 col-sm-12 col-lg-6">
